src/assets/css/style.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
  .app-input {
    @apply block w-full mt-1 shadow-sm rounded-md border-gray-300 
    focus:ring focus:ring-sky-200 focus:border-sky-300 hover:border-sky-300 
    dark:focus:ring dark:focus:ring-amber-200 dark:focus:border-amber-300 dark:hover:border-amber-300 
    sm:text-sm dark:bg-amber-50 dark:text-slate-900 dark:border-amber-300
  }

  .app-input[type='checkbox']:checked {
    @apply dark:bg-amber-600
  }

  .app-input-helptext {
    @apply mt-1 text-xs font-light app-text-secondary
  }
  
  .app-label {
    @apply block text-sm font-semibold app-text-secondary
  }

  .app-btn {
    @apply inline-flex justify-center py-2.5 px-7 ml-4 uppercase border border-transparent shadow-sm text-sm  
    app-text-primary font-semibold rounded-md focus:outline-none focus:ring-2 focus:ring-offset-2
    bg-amber-500 hover:bg-amber-600  focus:ring-amber-600 dark:ring-offset-slate-700
    dark:bg-amber-600 dark:hover:bg-amber-700  dark:focus:ring-amber-500 
  }
  
  .app-bg {
    @apply bg-gray-100 dark:bg-slate-800
  }

  .app-bg-100 {
    @apply bg-white dark:bg-slate-600
  }

  .app-bg-200 {
    @apply bg-gray-100 dark:bg-slate-700 
  }

  .app-text-primary {
    @apply text-slate-900 dark:text-white
  }

  .app-text-secondary {
    @apply text-slate-500 dark:text-slate-400
  }

  .app-card {
    @apply rounded app-bg-100 app-text-secondary 
    shadow hover:shadow-2xl dark:shadow-black 
    relative hover:z-10
  }
}

html, body, .h-full-screen {
  height: 100vh;
  height: -webkit-fill-available;
}

